@@ -1,5 +1,6 @@
 2011-02-23  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #17520: Pagetree - Locked records are not indicated anymore (Thanks to Stefan Galinski)
 	* Fixed bug #17702: Directly open "inline edit" of page title after creating a new page with drag and drop in the pagetree (Thanks to Stefan Galinski)
 
 2011-02-23  Ernesto Baschny  <ernst@cron-it.de>
